--- a/index.html
+++ b/index.html
@@ -2,19 +2,79 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Discord Webhook Form</title>
+  <title>Sign Up Portal</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(135deg, #1e1e2f, #2c3e50);
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      overflow: hidden;
+    }
+
+    .container {
+      background: rgba(255, 255, 255, 0.05);
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.4);
+      width: 350px;
+      animation: fadeIn 1s ease-out;
+    }
+
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+      font-weight: 600;
+      color: #f1f1f1;
+    }
+
+    input {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 6px;
+      background: #2f2f3f;
+      color: #fff;
+      font-size: 14px;
+    }
+
+    button {
+      width: 100%;
+      padding: 12px;
+      background: #3498db;
+      border: none;
+      border-radius: 6px;
+      color: #fff;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    button:hover {
+      background: #2980b9;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
 </head>
 <body>
-  <form id="form1">
-    <input type="text" id="Name" placeholder="Name" required>
-    <input type="email" id="Email" placeholder="Email" required>
-    <button type="submit">Submit</button>
-  </form>
-
-  <form id="form2">
-    <input type="text" id="Code" placeholder="Code" required>
-    <button type="submit">Submit</button>
-  </form>
+  <div class="container">
+    <h2>Sign Up</h2>
+    <form id="form1">
+      <input type="text" id="Name" placeholder="Your Name" required>
+      <input type="email" id="Email" placeholder="Your Email" required>
+      <button type="submit">Submit</button>
+    </form>
+  </div>
 
   <script src="script.js"></script>
 </body>
