--- a/index.html
+++ b/index.html
@@ -8,22 +8,35 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #1e1e2f, #2c3e50);
+      background: linear-gradient(-45deg, #1e1e2f, #2c3e50, #34495e, #1abc9c);
+      background-size: 400% 400%;
+      animation: gradientShift 15s ease infinite;
       color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
       overflow: hidden;
+      position: relative;
+    }
+
+    @keyframes gradientShift {
+      0% {background-position: 0% 50%;}
+      50% {background-position: 100% 50%;}
+      100% {background-position: 0% 50%;}
     }
 
     .container {
-      background: rgba(255, 255, 255, 0.05);
+      position: relative;
+      z-index: 2;
+      background: rgba(0, 0, 0, 0.6);
       padding: 40px;
       border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.4);
-      width: 350px;
-      animation: fadeIn 1s ease-out;
+      box-shadow: 0 0 30px rgba(0,0,0,0.6);
+      width: 360px;
+      margin: 100px auto;
+      animation: slideUp 1.2s ease-out;
+    }
+
+    @keyframes slideUp {
+      from { opacity: 0; transform: translateY(60px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     h2 {
@@ -42,31 +55,70 @@
       background: #2f2f3f;
       color: #fff;
       font-size: 14px;
+      transition: box-shadow 0.3s ease;
+    }
+
+    input:focus {
+      outline: none;
+      box-shadow: 0 0 10px #1abc9c;
     }
 
     button {
       width: 100%;
       padding: 12px;
-      background: #3498db;
+      background: #1abc9c;
       border: none;
       border-radius: 6px;
       color: #fff;
       font-weight: bold;
       cursor: pointer;
-      transition: background 0.3s ease;
+      animation: pulse 2s infinite;
     }
 
-    button:hover {
-      background: #2980b9;
+    @keyframes pulse {
+      0% { box-shadow: 0 0 0 0 rgba(26, 188, 156, 0.7); }
+      70% { box-shadow: 0 0 0 10px rgba(26, 188, 156, 0); }
+      100% { box-shadow: 0 0 0 0 rgba(26, 188, 156, 0); }
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+    .particles {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      z-index: 1;
+      overflow: hidden;
+    }
+
+    .particles span {
+      position: absolute;
+      display: block;
+      width: 6px;
+      height: 6px;
+      background: rgba(255,255,255,0.2);
+      animation: float 10s linear infinite;
+      border-radius: 50%;
+    }
+
+    @keyframes float {
+      0% { transform: translateY(0); opacity: 1; }
+      100% { transform: translateY(-100vh); opacity: 0; }
     }
   </style>
 </head>
 <body>
+  <div class="particles">
+    <!-- Generate 30 floating particles -->
+    <script>
+      for (let i = 0; i < 30; i++) {
+        const s = document.createElement('span');
+        s.style.left = Math.random() * 100 + '%';
+        s.style.top = Math.random() * 100 + '%';
+        s.style.animationDuration = (5 + Math.random() * 5) + 's';
+        document.querySelector('.particles').appendChild(s);
+      }
+    </script>
+  </div>
+
   <div class="container">
     <h2>Sign Up</h2>
     <form id="form1">
