--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
   <title>Sign Up Portal</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body {
+    * {
+      box-sizing: border-box;
       margin: 0;
+      padding: 0;
+    }
+
+    html, body {
+      height: 100%;
       font-family: 'Inter', sans-serif;
       background: linear-gradient(-45deg, #1e1e2f, #2c3e50, #34495e, #1abc9c);
       background-size: 400% 400%;
       animation: gradientShift 15s ease infinite;
-      color: #fff;
-      overflow: hidden;
-      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     @keyframes gradientShift {
@@ -23,38 +29,41 @@
     }
 
     .container {
-      position: relative;
-      z-index: 2;
-      background: rgba(0, 0, 0, 0.6);
-      padding: 40px;
-      border-radius: 12px;
+      background: rgba(0, 0, 0, 0.7);
+      padding: 40px 30px;
+      border-radius: 16px;
       box-shadow: 0 0 30px rgba(0,0,0,0.6);
-      width: 360px;
-      margin: 100px auto;
-      animation: slideUp 1.2s ease-out;
+      width: 100%;
+      max-width: 400px;
+      animation: fadeIn 1s ease-out;
     }
 
-    @keyframes slideUp {
-      from { opacity: 0; transform: translateY(60px); }
-      to { opacity: 1; transform: translateY(0); }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
     }
 
     h2 {
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 24px;
       font-weight: 600;
       color: #f1f1f1;
+      font-size: 1.8rem;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
     }
 
     input {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
+      padding: 14px;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
       background: #2f2f3f;
       color: #fff;
-      font-size: 14px;
+      font-size: 15px;
       transition: box-shadow 0.3s ease;
     }
 
@@ -64,61 +73,38 @@
     }
 
     button {
-      width: 100%;
-      padding: 12px;
+      padding: 14px;
       background: #1abc9c;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
       color: #fff;
       font-weight: bold;
+      font-size: 15px;
       cursor: pointer;
-      animation: pulse 2s infinite;
+      transition: background 0.3s ease, transform 0.2s ease;
     }
 
-    @keyframes pulse {
-      0% { box-shadow: 0 0 0 0 rgba(26, 188, 156, 0.7); }
-      70% { box-shadow: 0 0 0 10px rgba(26, 188, 156, 0); }
-      100% { box-shadow: 0 0 0 0 rgba(26, 188, 156, 0); }
+    button:hover {
+      background: #16a085;
+      transform: scale(1.02);
     }
 
-    .particles {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      z-index: 1;
-      overflow: hidden;
-    }
+    @media (max-width: 480px) {
+      .container {
+        padding: 30px 20px;
+      }
 
-    .particles span {
-      position: absolute;
-      display: block;
-      width: 6px;
-      height: 6px;
-      background: rgba(255,255,255,0.2);
-      animation: float 10s linear infinite;
-      border-radius: 50%;
-    }
+      h2 {
+        font-size: 1.5rem;
+      }
 
-    @keyframes float {
-      0% { transform: translateY(0); opacity: 1; }
-      100% { transform: translateY(-100vh); opacity: 0; }
+      input, button {
+        font-size: 14px;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="particles">
-    <!-- Generate 30 floating particles -->
-    <script>
-      for (let i = 0; i < 30; i++) {
-        const s = document.createElement('span');
-        s.style.left = Math.random() * 100 + '%';
-        s.style.top = Math.random() * 100 + '%';
-        s.style.animationDuration = (5 + Math.random() * 5) + 's';
-        document.querySelector('.particles').appendChild(s);
-      }
-    </script>
-  </div>
-
   <div class="container">
     <h2>Sign Up</h2>
     <form id="form1">
