--- a/index.html
+++ b/index.html
@@ -14,28 +14,23 @@
     html, body {
       height: 100%;
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(-45deg, #1e1e2f, #2c3e50, #34495e, #1abc9c);
-      background-size: 400% 400%;
-      animation: gradientShift 15s ease infinite;
+      background: radial-gradient(circle at center, #1e1e2f, #0f0f1f);
+      overflow: hidden;
       display: flex;
       justify-content: center;
       align-items: center;
-    }
-
-    @keyframes gradientShift {
-      0% {background-position: 0% 50%;}
-      50% {background-position: 100% 50%;}
-      100% {background-position: 0% 50%;}
+      position: relative;
     }
 
     .container {
-      background: rgba(0, 0, 0, 0.7);
-      padding: 40px 30px;
-      border-radius: 16px;
-      box-shadow: 0 0 30px rgba(0,0,0,0.6);
+      background: rgba(0, 0, 0, 0.75);
+      padding: 50px 40px;
+      border-radius: 20px;
+      box-shadow: 0 0 40px rgba(0,0,0,0.8);
       width: 100%;
-      max-width: 400px;
+      max-width: 600px;
       animation: fadeIn 1s ease-out;
+      z-index: 2;
     }
 
     @keyframes fadeIn {
@@ -45,66 +40,101 @@
 
     h2 {
       text-align: center;
-      margin-bottom: 24px;
+      margin-bottom: 30px;
       font-weight: 600;
       color: #f1f1f1;
-      font-size: 1.8rem;
+      font-size: 2rem;
     }
 
     form {
       display: flex;
       flex-direction: column;
-      gap: 16px;
+      gap: 20px;
     }
 
     input {
-      padding: 14px;
+      padding: 16px;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       background: #2f2f3f;
       color: #fff;
-      font-size: 15px;
+      font-size: 16px;
       transition: box-shadow 0.3s ease;
     }
 
     input:focus {
       outline: none;
-      box-shadow: 0 0 10px #1abc9c;
+      box-shadow: 0 0 12px #1abc9c;
     }
 
     button {
-      padding: 14px;
+      padding: 16px;
       background: #1abc9c;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       color: #fff;
       font-weight: bold;
-      font-size: 15px;
+      font-size: 16px;
       cursor: pointer;
       transition: background 0.3s ease, transform 0.2s ease;
+      animation: pulse 2s infinite;
     }
 
     button:hover {
       background: #16a085;
-      transform: scale(1.02);
+      transform: scale(1.03);
     }
 
-    @media (max-width: 480px) {
-      .container {
-        padding: 30px 20px;
-      }
+    @keyframes pulse {
+      0% { box-shadow: 0 0 0 0 rgba(26, 188, 156, 0.6); }
+      70% { box-shadow: 0 0 0 15px rgba(26, 188, 156, 0); }
+      100% { box-shadow: 0 0 0 0 rgba(26, 188, 156, 0); }
+    }
 
-      h2 {
-        font-size: 1.5rem;
-      }
+    .particles, .sparkles {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      pointer-events: none;
+      overflow: hidden;
+      z-index: 1;
+    }
 
-      input, button {
-        font-size: 14px;
-      }
+    .particles span, .sparkles span {
+      position: absolute;
+      display: block;
+      border-radius: 50%;
+    }
+
+    .particles span {
+      width: 8px;
+      height: 8px;
+      background: rgba(255,255,255,0.1);
+      animation: float 12s linear infinite;
+    }
+
+    .sparkles span {
+      width: 4px;
+      height: 4px;
+      background: rgba(255,255,255,0.4);
+      animation: sparkle 3s ease-in-out infinite;
+    }
+
+    @keyframes float {
+      0% { transform: translateY(0); opacity: 1; }
+      100% { transform: translateY(-100vh); opacity: 0; }
+    }
+
+    @keyframes sparkle {
+      0%, 100% { opacity: 0; transform: scale(0.5); }
+      50% { opacity: 1; transform: scale(1.5); }
     }
   </style>
 </head>
 <body>
+  <div class="particles"></div>
+  <div class="sparkles"></div>
+
   <div class="container">
     <h2>Sign Up</h2>
     <form id="form1">
@@ -113,6 +143,26 @@
       <button type="submit">Submit</button>
     </form>
   </div>
+
+  <script>
+    // Generate particles
+    for (let i = 0; i < 50; i++) {
+      const p = document.createElement('span');
+      p.style.left = Math.random() * 100 + '%';
+      p.style.top = Math.random() * 100 + '%';
+      p.style.animationDuration = (6 + Math.random() * 6) + 's';
+      document.querySelector('.particles').appendChild(p);
+    }
+
+    // Generate sparkles
+    for (let i = 0; i < 30; i++) {
+      const s = document.createElement('span');
+      s.style.left = Math.random() * 100 + '%';
+      s.style.top = Math.random() * 100 + '%';
+      s.style.animationDelay = (Math.random() * 3) + 's';
+      document.querySelector('.sparkles').appendChild(s);
+    }
+  </script>
 
   <script src="script.js"></script>
 </body>
