--- a/index.html
+++ b/index.html
@@ -31,13 +31,26 @@
       box-shadow: 0 0 40px rgba(0,0,0,0.8);
       width: 100%;
       max-width: 600px;
-      animation: fadeIn 1s ease-out;
+      animation: enterGlow 1.2s ease-out forwards;
+      opacity: 0;
       z-index: 2;
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.95); }
-      to { opacity: 1; transform: scale(1); }
+    @keyframes enterGlow {
+      0% {
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(0.85);
+        box-shadow: 0 0 0 rgba(0,0,0,0);
+      }
+      50% {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1.02);
+        box-shadow: 0 0 60px rgba(26, 188, 156, 0.4);
+      }
+      100% {
+        transform: translate(-50%, -50%) scale(1);
+        box-shadow: 0 0 40px rgba(0,0,0,0.8);
+      }
     }
 
     h2 {
