--- a/index.html
+++ b/index.html
@@ -31,19 +31,16 @@
       box-shadow: 0 0 40px rgba(0,0,0,0.8);
       width: 100%;
       max-width: 600px;
-      animation: enterGlow 1.2s ease-out forwards;
-      opacity: 0;
-      z-index: 2;
+      animation: enterGlow 1.2s ease-out;
+      z-index: 3;
     }
 
     @keyframes enterGlow {
       0% {
-        opacity: 0;
         transform: translate(-50%, -50%) scale(0.85);
         box-shadow: 0 0 0 rgba(0,0,0,0);
       }
       50% {
-        opacity: 1;
         transform: translate(-50%, -50%) scale(1.02);
         box-shadow: 0 0 60px rgba(26, 188, 156, 0.4);
       }
@@ -106,13 +103,12 @@
       100% { box-shadow: 0 0 0 0 rgba(26, 188, 156, 0); }
     }
 
-    .particles, .sparkles {
+    .particles, .sparkles, .cube-bg {
       position: absolute;
       top: 0; left: 0;
       width: 100%; height: 100%;
       pointer-events: none;
       overflow: hidden;
-      z-index: 1;
     }
 
     .particles span, .sparkles span {
@@ -144,9 +140,36 @@
       0%, 100% { opacity: 0; transform: scale(0.5); }
       50% { opacity: 1; transform: scale(1.5); }
     }
+
+    .cube {
+      position: absolute;
+      width: 300px;
+      height: 300px;
+      background: linear-gradient(135deg, #1abc9c, #2c3e50);
+      opacity: 0.1;
+      transform-style: preserve-3d;
+      animation: spinCube 60s linear infinite;
+      border-radius: 12px;
+      box-shadow: 0 0 60px rgba(26,188,156,0.2);
+    }
+
+    .cube1 { top: 10%; left: 15%; }
+    .cube2 { top: 50%; left: 70%; }
+    .cube3 { top: 80%; left: 30%; }
+
+    @keyframes spinCube {
+      0% { transform: rotateX(0deg) rotateY(0deg); }
+      100% { transform: rotateX(360deg) rotateY(360deg); }
+    }
   </style>
 </head>
 <body>
+  <div class="cube-bg">
+    <div class="cube cube1"></div>
+    <div class="cube cube2"></div>
+    <div class="cube cube3"></div>
+  </div>
+
   <div class="particles"></div>
   <div class="sparkles"></div>
 
