--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
       height: 100%;
       width: 100%;
       font-family: 'Inter', sans-serif;
-      background: radial-gradient(circle at center, #1e1e2f, #0f0f1f);
+      background: linear-gradient(-45deg, #1e1e2f, #2c3e50, #34495e, #1abc9c);
+      background-size: 400% 400%;
+      animation: gradientShift 30s ease infinite;
       overflow: hidden;
       position: relative;
+    }
+
+    @keyframes gradientShift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
 
     .container {
@@ -103,60 +111,6 @@
       100% { box-shadow: 0 0 0 0 rgba(26, 188, 156, 0); }
     }
 
-    .cube-wrapper {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 600px;
-      height: 600px;
-      perspective: 1200px;
-      z-index: 1;
-      opacity: 0.15;
-      animation: fadeCube 2s ease-out forwards;
-    }
-
-    @keyframes fadeCube {
-      0% { opacity: 0; transform: translate(-50%, -50%) scale(0.8); }
-      100% { opacity: 0.15; transform: translate(-50%, -50%) scale(1); }
-    }
-
-    .cube {
-      width: 100%;
-      height: 100%;
-      transform-style: preserve-3d;
-      animation: spinCube 90s linear infinite;
-    }
-
-    .cube-face {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(135deg, #1abc9c, #2c3e50);
-      background-size: 200% 200%;
-      animation: shiftGradient 20s ease infinite;
-      border-radius: 20px;
-      box-shadow: 0 0 60px rgba(26,188,156,0.2);
-    }
-
-    .cube-face.front  { transform: translateZ(300px); }
-    .cube-face.back   { transform: rotateY(180deg) translateZ(300px); }
-    .cube-face.right  { transform: rotateY(90deg) translateZ(300px); }
-    .cube-face.left   { transform: rotateY(-90deg) translateZ(300px); }
-    .cube-face.top    { transform: rotateX(90deg) translateZ(300px); }
-    .cube-face.bottom { transform: rotateX(-90deg) translateZ(300px); }
-
-    @keyframes spinCube {
-      0%   { transform: rotateX(0deg) rotateY(0deg); }
-      100% { transform: rotateX(360deg) rotateY(360deg); }
-    }
-
-    @keyframes shiftGradient {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
     .particles, .sparkles {
       position: absolute;
       top: 0; left: 0;
@@ -196,17 +150,6 @@
   </style>
 </head>
 <body>
-  <div class="cube-wrapper">
-    <div class="cube">
-      <div class="cube-face front"></div>
-      <div class="cube-face back"></div>
-      <div class="cube-face right"></div>
-      <div class="cube-face left"></div>
-      <div class="cube-face top"></div>
-      <div class="cube-face bottom"></div>
-    </div>
-  </div>
-
   <div class="particles"></div>
   <div class="sparkles"></div>
 
