--- a/Sign Up Code.html
+++ b/Sign Up Code.html
@@ -5,69 +5,104 @@
   <title>Enter Your Code</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body {
+    html, body {
+      height: 100%;
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #1e1e2f, #2c3e50);
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      background: linear-gradient(-45deg, #2c003e, #3b1f5c, #4b2a6f, #6c3fa0);
+      background-size: 400% 400%;
+      animation: gradientShift 30s ease infinite;
+      overflow: hidden;
+      position: relative;
+    }
+
+    @keyframes gradientShift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
 
     .container {
-      background: rgba(255, 255, 255, 0.05);
-      padding: 40px;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.4);
-      width: 350px;
-      animation: fadeIn 1s ease-out;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(0, 0, 0, 0.75);
+      padding: 50px 40px;
+      border-radius: 20px;
+      box-shadow: 0 0 40px rgba(0,0,0,0.8);
+      width: 100%;
+      max-width: 600px;
+      animation: enterGlow 1.2s ease-out;
+      z-index: 2;
+    }
+
+    @keyframes enterGlow {
+      0% {
+        transform: translate(-50%, -50%) scale(0.85);
+        box-shadow: 0 0 0 rgba(0,0,0,0);
+      }
+      50% {
+        transform: translate(-50%, -50%) scale(1.02);
+        box-shadow: 0 0 60px rgba(155, 89, 182, 0.4);
+      }
+      100% {
+        transform: translate(-50%, -50%) scale(1);
+        box-shadow: 0 0 40px rgba(0,0,0,0.8);
+      }
     }
 
     h2 {
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
       font-weight: 600;
+      color: #f1f1f1;
+      font-size: 2rem;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
     }
 
     input {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
+      padding: 16px;
       border: none;
-      border-radius: 6px;
-      background: #2f2f3f;
+      border-radius: 10px;
+      background: #3b2f4f;
       color: #fff;
-      font-size: 14px;
+      font-size: 16px;
+      transition: box-shadow 0.3s ease;
+    }
+
+    input:focus {
+      outline: none;
+      box-shadow: 0 0 12px #9b59b6;
     }
 
     button {
-      width: 100%;
-      padding: 12px;
-      background: #e74c3c;
+      padding: 16px;
+      background: #9b59b6;
       border: none;
-      border-radius: 6px;
+      border-radius: 10px;
       color: #fff;
       font-weight: bold;
+      font-size: 16px;
       cursor: pointer;
-      transition: background 0.3s ease;
+      transition: background 0.3s ease, transform 0.2s ease;
+      animation: pulse 2s infinite;
     }
 
     button:hover {
-      background: #c0392b;
+      background: #8e44ad;
+      transform: scale(1.03);
     }
 
-    .error {
-      color: #ff6b6b;
-      font-size: 0.9rem;
-      text-align: center;
-      margin-top: 10px;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+    @keyframes pulse {
+      0% { box-shadow: 0 0 0 0 rgba(155, 89, 182, 0.6); }
+      70% { box-shadow: 0 0 0 15px rgba(155, 89, 182, 0); }
+      100% { box-shadow: 0 0 0 0 rgba(155, 89, 182, 0); }
     }
   </style>
 </head>
@@ -77,7 +112,6 @@
     <form id="form2">
       <input type="text" id="Code" placeholder="6-digit Code" required>
       <button type="submit">Submit</button>
-      <div id="errorMsg" class="error"></div>
     </form>
   </div>
 
