--- a/Error.html
+++ b/Error.html
@@ -3,30 +3,68 @@
 <head>
   <meta charset="UTF-8">
   <title>Error</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body {
-      background: #2c3e50;
-      color: #fff;
+    html, body {
+      height: 100%;
+      margin: 0;
       font-family: 'Inter', sans-serif;
+      background: linear-gradient(-45deg, #3b0f0f, #5c1a1a, #7f2b2b, #a94444);
+      background-size: 400% 400%;
+      animation: gradientShift 30s ease infinite;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      overflow: hidden;
+    }
+
+    @keyframes gradientShift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    .box {
+      background: rgba(0, 0, 0, 0.75);
+      padding: 40px;
+      border-radius: 16px;
+      box-shadow: 0 0 30px rgba(0,0,0,0.6);
       text-align: center;
+      animation: enterGlow 1.2s ease-out;
+    }
+
+    @keyframes enterGlow {
+      0% {
+        transform: scale(0.85);
+        box-shadow: 0 0 0 rgba(0,0,0,0);
+        opacity: 0;
+      }
+      50% {
+        transform: scale(1.02);
+        box-shadow: 0 0 60px rgba(231, 76, 60, 0.4);
+        opacity: 1;
+      }
+      100% {
+        transform: scale(1);
+        box-shadow: 0 0 30px rgba(0,0,0,0.6);
+        opacity: 1;
+      }
     }
 
     h1 {
       font-size: 2rem;
       color: #e74c3c;
+      margin-bottom: 10px;
     }
 
     p {
       font-size: 1rem;
+      color: #f1f1f1;
     }
   </style>
 </head>
 <body>
-  <div>
+  <div class="box">
     <h1>Something went wrong</h1>
     <p>Please try again or contact support.</p>
   </div>
