--- a/signin.html
+++ b/signin.html
@@ -9,93 +9,69 @@
       height: 100%;
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(-45deg, #1e1e2f, #2c3e50, #34495e, #1abc9c);
-      background-size: 400% 400%;
-      animation: gradientShift 30s ease infinite;
-      overflow: hidden;
-      position: relative;
-    }
-
-    @keyframes gradientShift {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+      background: linear-gradient(135deg, #1c1c1c, #2e2e2e);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
     }
 
     .container {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: rgba(0, 0, 0, 0.75);
-      padding: 50px 40px;
-      border-radius: 20px;
-      box-shadow: 0 0 40px rgba(0,0,0,0.8);
+      background: #111;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 0 30px rgba(0,0,0,0.6);
       width: 100%;
-      max-width: 500px;
-      animation: enterGlow 1.2s ease-out;
-      z-index: 2;
+      max-width: 400px;
+      animation: fadeIn 1s ease-out;
     }
 
-    @keyframes enterGlow {
-      0% {
-        transform: translate(-50%, -50%) scale(0.85);
-        box-shadow: 0 0 0 rgba(0,0,0,0);
-      }
-      50% {
-        transform: translate(-50%, -50%) scale(1.02);
-        box-shadow: 0 0 60px rgba(26, 188, 156, 0.4);
-      }
-      100% {
-        transform: translate(-50%, -50%) scale(1);
-        box-shadow: 0 0 40px rgba(0,0,0,0.8);
-      }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
     }
 
     h2 {
       text-align: center;
       margin-bottom: 20px;
       font-weight: 600;
-      color: #f1f1f1;
-      font-size: 1.8rem;
+      font-size: 1.6rem;
     }
 
     form {
       display: flex;
       flex-direction: column;
-      gap: 20px;
+      gap: 16px;
     }
 
     input {
-      padding: 14px;
+      padding: 12px;
       border: none;
-      border-radius: 10px;
-      background: #2f2f3f;
+      border-radius: 8px;
+      background: #2a2a2a;
       color: #fff;
-      font-size: 15px;
+      font-size: 14px;
     }
 
     button {
-      padding: 14px;
-      background: #1abc9c;
+      padding: 12px;
+      background: #555;
       border: none;
-      border-radius: 10px;
+      border-radius: 8px;
       color: #fff;
       font-weight: bold;
-      font-size: 15px;
       cursor: pointer;
       transition: background 0.3s ease;
     }
 
     button:hover {
-      background: #16a085;
+      background: #777;
     }
 
     .error-msg {
       text-align: center;
       color: #e74c3c;
-      font-size: 0.95rem;
-      margin-top: 10px;
+      font-size: 0.9rem;
       display: none;
     }
   </style>
