--- a/signin.html
+++ b/signin.html
@@ -10,19 +10,67 @@
       margin: 0;
       font-family: 'Inter', sans-serif;
       background: linear-gradient(135deg, #1c1c1c, #2e2e2e);
-      display: flex;
-      justify-content: center;
-      align-items: center;
       color: #fff;
     }
 
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 40px;
+      background: rgba(0,0,0,0.6);
+      box-shadow: 0 0 20px rgba(0,0,0,0.4);
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
+
+    .nav-left {
+      display: flex;
+      gap: 30px;
+    }
+
+    .nav-item {
+      font-weight: 600;
+      font-size: 16px;
+      color: #888;
+      text-decoration: line-through;
+      cursor: not-allowed;
+      position: relative;
+    }
+
+    .nav-item.home {
+      color: #fff;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+    .nav-item.home:hover {
+      color: #1abc9c;
+      text-shadow: 0 0 6px #1abc9c;
+    }
+
+    .nav-item.disabled:hover::after {
+      content: "Need to sign in to access";
+      position: absolute;
+      top: 120%;
+      left: 0;
+      background: #222;
+      padding: 6px 10px;
+      border-radius: 6px;
+      font-size: 12px;
+      white-space: nowrap;
+      color: #fff;
+      opacity: 0.9;
+    }
+
     .container {
+      max-width: 400px;
+      margin: 100px auto;
       background: #111;
       padding: 40px;
       border-radius: 12px;
       box-shadow: 0 0 30px rgba(0,0,0,0.6);
-      width: 100%;
-      max-width: 400px;
       animation: fadeIn 1s ease-out;
     }
 
@@ -77,6 +125,15 @@
   </style>
 </head>
 <body>
+  <div class="navbar">
+    <div class="nav-left">
+      <a href="index.html" class="nav-item home">Home</a>
+      <div class="nav-item disabled">Marketplace</div>
+      <div class="nav-item disabled">Download</div>
+      <div class="nav-item disabled">Search</div>
+    </div>
+  </div>
+
   <div class="container">
     <h2>Already have an account with us?</h2>
     <form id="loginForm">
