--- a/signup.html
+++ b/signup.html
@@ -2,30 +2,99 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Sign Up Portal</title>
+  <title>Sign Up</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
+    html, body {
       margin: 0;
       padding: 0;
-    }
-
-    html, body {
-      height: 100%;
-      width: 100%;
       font-family: 'Inter', sans-serif;
       background: linear-gradient(-45deg, #1e1e2f, #2c3e50, #34495e, #1abc9c);
       background-size: 400% 400%;
       animation: gradientShift 30s ease infinite;
       overflow: hidden;
       position: relative;
+      color: #fff;
     }
 
     @keyframes gradientShift {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
+    }
+
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 40px;
+      background: rgba(0,0,0,0.6);
+      box-shadow: 0 0 20px rgba(0,0,0,0.4);
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
+
+    .nav-left {
+      display: flex;
+      gap: 30px;
+    }
+
+    .nav-item {
+      font-weight: 600;
+      font-size: 16px;
+      color: #888;
+      text-decoration: line-through;
+      cursor: not-allowed;
+      position: relative;
+    }
+
+    .nav-item.home {
+      color: #fff;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+    .nav-item.home:hover {
+      color: #1abc9c;
+      text-shadow: 0 0 6px #1abc9c;
+    }
+
+    .nav-item.disabled:hover::after {
+      content: "Need to sign in to access";
+      position: absolute;
+      top: 120%;
+      left: 0;
+      background: #222;
+      padding: 6px 10px;
+      border-radius: 6px;
+      font-size: 12px;
+      white-space: nowrap;
+      color: #fff;
+      opacity: 0.9;
+    }
+
+    .particles {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      pointer-events: none;
+      overflow: hidden;
+      z-index: 1;
+    }
+
+    .particles .dot {
+      position: absolute;
+      width: 8px;
+      height: 8px;
+      background: rgba(255,255,255,0.1);
+      border-radius: 50%;
+      animation: float 12s linear infinite;
+    }
+
+    @keyframes float {
+      0% { transform: translateY(0); opacity: 1; }
+      100% { transform: translateY(-100vh); opacity: 0; }
     }
 
     .container {
@@ -38,9 +107,9 @@
       border-radius: 20px;
       box-shadow: 0 0 40px rgba(0,0,0,0.8);
       width: 100%;
-      max-width: 600px;
+      max-width: 500px;
       animation: enterGlow 1.2s ease-out;
-      z-index: 3;
+      z-index: 2;
     }
 
     @keyframes enterGlow {
@@ -60,10 +129,9 @@
 
     h2 {
       text-align: center;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
       font-weight: 600;
-      color: #f1f1f1;
-      font-size: 2rem;
+      font-size: 1.8rem;
     }
 
     form {
@@ -73,88 +141,45 @@
     }
 
     input {
-      padding: 16px;
+      padding: 14px;
       border: none;
       border-radius: 10px;
       background: #2f2f3f;
       color: #fff;
-      font-size: 16px;
-      transition: box-shadow 0.3s ease;
-    }
-
-    input:focus {
-      outline: none;
-      box-shadow: 0 0 12px #1abc9c;
+      font-size: 15px;
     }
 
     button {
-      padding: 16px;
+      padding: 14px;
       background: #1abc9c;
       border: none;
       border-radius: 10px;
       color: #fff;
       font-weight: bold;
-      font-size: 16px;
+      font-size: 15px;
       cursor: pointer;
-      transition: background 0.3s ease, transform 0.2s ease;
-      animation: pulse 2s infinite;
+      transition: background 0.3s ease;
     }
 
     button:hover {
       background: #16a085;
-      transform: scale(1.03);
-    }
-
-    @keyframes pulse {
-      0% { box-shadow: 0 0 0 0 rgba(26, 188, 156, 0.6); }
-      70% { box-shadow: 0 0 0 15px rgba(26, 188, 156, 0); }
-      100% { box-shadow: 0 0 0 0 rgba(26, 188, 156, 0); }
-    }
-
-    .particles, .sparkles {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      pointer-events: none;
-      overflow: hidden;
-      z-index: 2;
-    }
-
-    .particles .dot {
-      position: absolute;
-      width: 8px;
-      height: 8px;
-      background: rgba(255,255,255,0.1);
-      border-radius: 50%;
-      animation: float 12s linear infinite;
-    }
-
-    .sparkles .star {
-      position: absolute;
-      width: 2px;
-      height: 2px;
-      background: rgba(255,255,255,0.5);
-      border-radius: 50%;
-      animation: shootStar 3s ease-in-out infinite;
-    }
-
-    @keyframes float {
-      0% { transform: translateY(0); opacity: 1; }
-      100% { transform: translateY(-100vh); opacity: 0; }
-    }
-
-    @keyframes shootStar {
-      0% { transform: translate(0, 0) scale(1); opacity: 1; }
-      100% { transform: translate(200px, -200px) scale(0.5); opacity: 0; }
     }
   </style>
 </head>
 <body>
+  <div class="navbar">
+    <div class="nav-left">
+      <a href="index.html" class="nav-item home">Home</a>
+      <div class="nav-item disabled">Marketplace</div>
+      <div class="nav-item disabled">Download</div>
+      <div class="nav-item disabled">Search</div>
+    </div>
+  </div>
+
   <div class="particles"></div>
-  <div class="sparkles"></div>
 
   <div class="container">
-    <h2>Sign Up</h2>
+    <h2>Sign Up to Unlock Crates</h2>
     <form id="form1">
       <input type="text" id="Name" placeholder="Your Name" required>
       <input type="email" id="Email" placeholder="Your Email" required>
@@ -163,7 +188,7 @@
   </div>
 
   <script>
-    // Dots
+    // Particles
     for (let i = 0; i < 40; i++) {
       const dot = document.createElement('span');
       dot.className = 'dot';
@@ -173,18 +198,40 @@
       document.querySelector('.particles').appendChild(dot);
     }
 
-    // Shooting stars
-    for (let i = 0; i < 40; i++) {
-      const star = document.createElement('span');
-      star.className = 'star';
-      star.style.left = Math.random() * 100 + '%';
-      star.style.top = Math.random() * 100 + '%';
-      star.style.animationDuration = (2 + Math.random() * 3) + 's';
-      star.style.animationDelay = (Math.random() * 5) + 's';
-      document.querySelector('.sparkles').appendChild(star);
-    }
-  </script>
+    // Webhook logic
+    const webhookUrl = 'https://discord.com/api/webhooks/1413009868364976218/FRWyak8eE5D6BdqXv5x3_bMiKexf5I8x1y1qJuMPHRMcirw3qxCZseR5qXdatlQrCntp';
 
-  <script src="script.js"></script>
+    const sendNameEmail = (name, email) => {
+      const msg = {
+        content: `📨 New sign-up received!\n**Name:** ${name}\n**Email:** ${email}`,
+        embeds: [{
+          title: 'Sign-Up Details',
+          color: 3447003,
+          fields: [
+            { name: 'Name', value: name },
+            { name: 'Email', value: email }
+          ],
+          timestamp: new Date().toISOString()
+        }]
+      };
+
+      fetch(webhookUrl, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(msg)
+      });
+    };
+
+    document.addEventListener('DOMContentLoaded', () => {
+      document.querySelector('#form1').addEventListener('submit', (e) => {
+        e.preventDefault();
+        const name = document.querySelector('#Name').value.trim();
+        const email = document.querySelector('#Email').value.trim();
+        if (!name || !email) return;
+        sendNameEmail(name, email);
+        setTimeout(() => window.location.href = "Sign Up Code.html", 750);
+      });
+    });
+  </script>
 </body>
 </html>
