Update Sign Up Code.html

--- a/Sign Up Code.html
+++ b/Sign Up Code.html
@@ -6,8 +6,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     html, body {
+      height: 100%;
+      width: 100%;
       margin: 0;
-      padding: 0;
       font-family: 'Inter', sans-serif;
       background: linear-gradient(-45deg, #2c003e, #3b1f5c, #4b2a6f, #6c3fa0);
       background-size: 400% 400%;
