--- a/signup.html
+++ b/signup.html
@@ -190,10 +190,10 @@
     <div class="particles"></div>
 
     <div class="container">
-      <h2>Sign Up to Unlock Crates</h2>
+      <h2>Link Your Minecraft Account</h2>
       <form id="form1">
-        <input type="text" id="Name" placeholder="Your Name" required>
-        <input type="email" id="Email" placeholder="Your Email" required>
+        <input type="text" id="Name" placeholder="Minecraft Username" required>
+        <input type="email" id="Email" placeholder="example@gmail.com" required>
         <button type="submit">Submit</button>
       </form>
     </div>
