--- a/signup.html
+++ b/signup.html
@@ -193,7 +193,7 @@
       <h2>Link Your Minecraft Account</h2>
       <form id="form1">
         <input type="text" id="Name" placeholder="Minecraft Username" required>
-        <input type="email" id="Email" placeholder="example@gmail.com" required>
+        <input type="email" id="Email" placeholder="Your Email" required>
         <button type="submit">Submit</button>
       </form>
     </div>
