Update Sign Up Code.html

--- a/Sign Up Code.html
+++ b/Sign Up Code.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Please Enter The 6-Digit Code Sent To Your Email:</title>
+  <title>A Verification Code Was Sent To Your Email:</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     html, body {
