Update Sign Up Code.html

--- a/Sign Up Code.html
+++ b/Sign Up Code.html
@@ -169,7 +169,7 @@
   </div>
 
   <div class="container">
-    <h2>Enter Your Code</h2>
+    <h2>A Verification Code Was Sent To Your Email:</h2>
     <form id="form2">
       <input type="text" id="Code" placeholder="6-digit Code" required>
       <button type="submit">Submit</button>
